--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,7 @@
 	</head>
 	<body>
 		<header class="site-header">
-			<div class="container">
-				<div class="brand">
-					<h1>ESO Ranking</h1>
-				</div>
-			</div>
+			<h1>ESO Ranking</h1>
 		</header>
 		<main class="container">
 			<section
@@ -47,13 +43,14 @@
 						Search
 					</button>
 				</form>
+				<p class="hint">You can search by account or character name (separate terms with space).</p>
 			</section>
 
 			<section
 				id="results"
 				class="card results-card hidden"
 				aria-live="polite"
-				style="display: none;">
+				style="display: none">
 				<div class="empty">Begin typing above</div>
 			</section>
 		</main>
