Add data source footer and tweak header styles
Add a site footer linking to https://eso-hub.com in public/index.html. Adjust styles in public/styles.css to ensure consistent heights and alignment: set h1 to align-items: stretch, keep input font-size note, remove vertical button padding and set button height: 100% for flex alignment, and add .site-footer a styling to inherit color and underline. These changes improve visual consistency of the header/search control and add attribution for the data source.

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,18 @@
 			</section>
 		</main>
 
+		<footer class="site-footer">
+			<div class="container">
+				Data sourced from
+				<a
+					href="https://eso-hub.com"
+					target="_blank"
+					rel="noopener"
+					>www.eso-hub.com</a
+				>
+			</div>
+		</footer>
+
 		<script src="script.js"></script>
 	</body>
 </html>
