--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
 			</section>
 		</main>
 
+		<footer class="site-footer">
+			<div class="container">
+				Data sourced from
+				<a
+					href="https://eso-hub.com"
+					target="_blank"
+					rel="noopener"
+					>www.eso-hub.com</a
+				>
+			</div>
+		</footer>
+
 		<script src="script.js"></script>
 	</body>
 </html>
