Add data update frequency to search hint
Update the search hint in public/index.html to inform users that data is updated once per day. Adjusted the hint paragraph formatting (added a line break) to include the update frequency message.

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,10 @@
 						Search
 					</button>
 				</form>
-				<p class="hint">You can search by account or character name (separate terms with space).</p>
+				<p class="hint">
+					You can search by account or character name (separate terms with space).<br />Data is
+					updated once per day
+				</p>
 			</section>
 
 			<section
