--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 						Search
 					</button>
 				</form>
-				<p class="hint">You can search by account or character name (separate terms with space).</p>
+				<p class="hint">
+					You can search by account or character name (separate terms with space).<br />Data is
+					updated once per day
+				</p>
 			</section>
 
 			<section
