Add page view counter script to index.html
Insert an inline script in public/index.html that POSTs to an external page-counter worker to increment the view count for this page. The script sends a POST to https://page-counter.flamebuckler.workers.dev with page=ESO-Ranking (URL-encoded) and uses keepalive: true so the request can complete during page unload.

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
 		<link
 			rel="stylesheet"
 			href="styles.css" />
+
+		<script>
+			const workerUrl = 'https://page-counter.flamebuckler.workers.dev';
+			const pageId = 'ESO-Ranking'; // Unique identifier for this page
+
+			fetch(`${workerUrl}/increment?page=${encodeURIComponent(pageId)}`, {
+				method: 'POST',
+				keepalive: true,
+			});
+		</script>
 	</head>
 	<body>
 		<header class="site-header">
