Add SCSS styling and build scripts
Introduce SCSS-based styling and tooling: add public/styles.scss (imports shared github:flamebuckler/styles), update public/styles.css to the compiled/updated styles, and add npm scripts build:css and watch:css. Update package.json (rename to "eso-ranking", add "styles" dependency and "sass" devDependency, add build/watch scripts, fix repository URL) and regenerate package-lock.json. Also document the new Styles section in README.md and apply a minor punctuation fix in public/index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 				</form>
 				<p class="hint">
 					You can search by account or character name (separate terms with space).<br />Data is
-					updated once per day
+					updated once per day.
 				</p>
 			</section>
 
