--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</form>
 				<p class="hint">
 					You can search by account or character name (separate terms with space).<br />Data is
-					updated once per day
+					updated once per day.
 				</p>
 			</section>
 
