Add header tagline
Insert a short descriptive tagline under the site header to prompt users to search accounts or characters: "Search any account or character, see where you stand". This clarifies the site's purpose on the landing page (public/index.html).

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 	<body>
 		<header class="site-header">
 			<h1>ESO Ranking</h1>
+			<p>Search any account or character, see where you stand</p>
 		</header>
 		<main class="container">
 			<section
