--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<body>
 		<header class="site-header">
 			<h1>ESO Ranking</h1>
+			<p>Search any account or character, see where you stand</p>
 		</header>
 		<main class="container">
 			<section
